src/variable_versions/snapshots/netflow_parser__variable_versions__ipfix_lookup__ipfix_lookup_tests__field_data_type_lookup.snap
---
source: src/variable_versions/ipfix_lookup.rs
expression: lookup
---
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- Ip4Addr
- Ip4Addr
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- DurationSeconds
- DurationSeconds
- DurationMillis
- DurationMillis
- DurationMicros
- DurationMicros
- DurationNanos
- DurationNanos
- UnsignedDataNumber
- UnsignedDataNumber
- DurationMillis
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- Ip4Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- DurationMillis
- UnsignedDataNumber
- DurationSeconds
- DurationSeconds
- String
- UnsignedDataNumber
- DurationSeconds
- DurationSeconds
- String
- UnsignedDataNumber
- DurationMicros
- DurationMillis
- DurationNanos
- DurationMicros
- DurationMillis
- DurationNanos
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- Unknown
- Unknown
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Float64
- UnsignedDataNumber
- String
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- Float64
- Float64
- DurationSeconds
- DurationMillis
- DurationMicros
- DurationNanos
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- Float64
- Float64
- Float64
- UnsignedDataNumber
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- DurationMillis
- DurationMillis
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- Ip4Addr
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- String
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- SignedDataNumber
- String
- String
- String
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- String
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- String
- UnsignedDataNumber
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- String
- String
- String
- String
- String
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- String
- String
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
