src/variable_versions/snapshots/netflow_parser__variable_versions__ipfix_lookup__ipfix_lookup_tests__it_tests_field_lookup.snap
---
source: src/variable_versions/ipfix_lookup.rs
expression: lookup
---
- Reserved
- OctetDeltaCount
- PacketDeltaCount
- DeltaFlowCount
- ProtocolIdentifier
- IpClassOfService
- TcpControlBits
- SourceTransportPort
- SourceIpv4address
- SourceIpv4prefixLength
- IngressInterface
- DestinationTransportPort
- DestinationIpv4address
- DestinationIpv4prefixLength
- EgressInterface
- IpNextHopIpv4address
- BgpSourceAsNumber
- BgpDestinationAsNumber
- BgpNextHopIpv4address
- PostMcastPacketDeltaCount
- PostMcastOctetDeltaCount
- FlowEndSysUpTime
- FlowStartSysUpTime
- PostOctetDeltaCount
- PostPacketDeltaCount
- MinimumIpTotalLength
- MaximumIpTotalLength
- SourceIpv6address
- DestinationIpv6address
- SourceIpv6prefixLength
- DestinationIpv6prefixLength
- FlowLabelIpv6
- IcmpTypeCodeIpv4
- IgmpType
- SamplingInterval
- SamplingAlgorithm
- FlowActiveTimeout
- FlowIdleTimeout
- EngineType
- EngineId
- ExportedOctetTotalCount
- ExportedMessageTotalCount
- ExportedFlowRecordTotalCount
- Ipv4routerSc
- SourceIpv4prefix
- DestinationIpv4prefix
- MplsTopLabelType
- MplsTopLabelIpv4address
- SamplerId
- SamplerMode
- SamplerRandomInterval
- ClassId
- MinimumTtl
- MaximumTtl
- FragmentIdentification
- PostIpClassOfService
- SourceMacaddress
- PostDestinationMacaddress
- VlanId
- PostVlanId
- IpVersion
- FlowDirection
- IpNextHopIpv6address
- BgpNextHopIpv6address
- Ipv6extensionHeaders
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- MplsTopLabelStackSection
- MplsLabelStackSection2
- MplsLabelStackSection3
- MplsLabelStackSection4
- MplsLabelStackSection5
- MplsLabelStackSection6
- MplsLabelStackSection7
- MplsLabelStackSection8
- MplsLabelStackSection9
- MplsLabelStackSection10
- DestinationMacaddress
- PostSourceMacaddress
- InterfaceName
- InterfaceDescription
- SamplerName
- OctetTotalCount
- PacketTotalCount
- FlagsAndSamplerId
- FragmentOffset
- ForwardingStatus
- MplsVpnRouteDistinguisher
- MplsTopLabelprefixLength
- SrcTrafficIndex
- DstTrafficIndex
- ApplicationDescription
- ApplicationId
- ApplicationName
- AssignedforNetFlowv9compatibility
- PostIpDiffServCodePoint
- MulticastReplicationFactor
- ClassName
- ClassificationEngineId
- Layer2packetSectionOffset
- Layer2packetSectionSize
- Layer2packetSectionData
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- AssignedforNetFlowv9compatibility
- BgpNextAdjacentAsNumber
- BgpPrevAdjacentAsNumber
- ExporterIpv4address
- ExporterIpv6address
- DroppedOctetDeltaCount
- DroppedPacketDeltaCount
- DroppedOctetTotalCount
- DroppedPacketTotalCount
- FlowEndReason
- CommonPropertiesId
- ObservationPointId
- IcmpTypeCodeIpv6
- MplsTopLabelIpv6address
- LineCardId
- PortId
- MeteringProcessId
- ExportingProcessId
- TemplateId
- WlanChannelId
- WlanSsid
- FlowId
- ObservationDomainId
- FlowStartSeconds
- FlowEndSeconds
- FlowStartMilliseconds
- FlowEndMilliseconds
- FlowStartMicroseconds
- FlowEndMicroseconds
- FlowStartNanoseconds
- FlowEndNanoseconds
- FlowStartDeltaMicroseconds
- FlowEndDeltaMicroseconds
- SystemInitTimeMilliseconds
- FlowDurationMilliseconds
- FlowDurationMicroseconds
- ObservedFlowTotalCount
- IgnoredPacketTotalCount
- IgnoredOctetTotalCount
- NotSentFlowTotalCount
- NotSentPacketTotalCount
- NotSentOctetTotalCount
- DestinationIpv6prefix
- SourceIpv6prefix
- PostOctetTotalCount
- PostPacketTotalCount
- FlowKeyIndicator
- PostMcastPacketTotalCount
- PostMcastOctetTotalCount
- IcmpTypeIpv4
- IcmpCodeIpv4
- IcmpTypeIpv6
- IcmpCodeIpv6
- UdpSourcePort
- UdpDestinationPort
- TcpSourcePort
- TcpDestinationPort
- TcpSequenceNumber
- TcpAcknowledgementNumber
- TcpWindowSize
- TcpUrgentPointer
- TcpHeaderLength
- IpHeaderLength
- TotalLengthIpv4
- PayloadLengthIpv6
- IpTtl
- NextHeaderIpv6
- MplsPayloadLength
- IpDiffServCodePoint
- IpPrecedence
- FragmentFlags
- OctetDeltaSumOfSquares
- OctetTotalSumOfSquares
- MplsTopLabelTtl
- MplsLabelStackLength
- MplsLabelStackDepth
- MplsTopLabelExp
- IpPayloadLength
- UdpMessageLength
- IsMulticast
- Ipv4ihl
- Ipv4options
- TcpOptions
- PaddingOctets
- CollectorIpv4address
- CollectorIpv6address
- ExportInterface
- ExportProtocolVersion
- ExportTransportProtocol
- CollectorTransportPort
- ExporterTransportPort
- TcpSynTotalCount
- TcpFinTotalCount
- TcpRstTotalCount
- TcpPshTotalCount
- TcpAckTotalCount
- TcpUrgTotalCount
- IpTotalLength
- PostNatsourceIpv4address
- PostNatdestinationIpv4address
- PostNaptsourceTransportPort
- PostNaptdestinationTransportPort
- NatOriginatingaddressRealm
- NatEvent
- InitiatorOctets
- ResponderOctets
- FirewallEvent
- IngressVrfid
- EgressVrfid
- VRFname
- PostMplsTopLabelExp
- TcpWindowScale
- BiflowDirection
- EthernetHeaderLength
- EthernetPayloadLength
- EthernetTotalLength
- Dot1qVlanId
- Dot1qPriority
- Dot1qCustomerVlanId
- Dot1qCustomerPriority
- MetroEvcId
- MetroEvcType
- PseudoWireId
- PseudoWireType
- PseudoWireControlWord
- IngressPhysicalInterface
- EgressPhysicalInterface
- PostDot1qVlanId
- PostDot1qCustomerVlanId
- EthernetType
- PostIpPrecedence
- CollectionTimeMilliseconds
- ExportSctpStreamId
- MaxExportSeconds
- MaxFlowEndSeconds
- MessageMd5checksum
- MessageScope
- MinExportSeconds
- MinFlowStartSeconds
- OpaqueOctets
- SessionScope
- MaxFlowEndMicroseconds
- MaxFlowEndMilliseconds
- MaxFlowEndNanoseconds
- MinFlowStartMicroseconds
- MinFlowStartMilliseconds
- MinFlowStartNanoseconds
- CollectorCertificate
- ExporterCertificate
- DataRecordsReliability
- ObservationPointType
- NewConnectionDeltaCount
- ConnectionSumDurationSeconds
- ConnectionTransactionId
- PostNatsourceIpv6address
- PostNatdestinationIpv6address
- NatPoolId
- NatPoolName
- AnonymizationFlags
- AnonymizationTechnique
- InformationElementIndex
- P2pTechnology
- TunnelTechnology
- EncryptedTechnology
- BasicList
- SubTemplateList
- SubTemplateMultiList
- BgpValidityState
- IpSecSPI
- GreKey
- NatType
- InitiatorPackets
- ResponderPackets
- ObservationDomainName
- SelectionSequenceId
- SelectorId
- InformationElementId
- SelectorAlgorithm
- SamplingPacketInterval
- SamplingPacketSpace
- SamplingTimeInterval
- SamplingTimeSpace
- SamplingSize
- SamplingPopulation
- SamplingProbability
- DataLinkFrameSize
- IpHeaderPacketSection
- IpPayloadPacketSection
- DataLinkFrameSection
- MplsLabelStackSection
- MplsPayloadPacketSection
- SelectorIdTotalPktsObserved
- SelectorIdTotalPktsSelected
- AbsoluteError
- RelativeError
- ObservationTimeSeconds
- ObservationTimeMilliseconds
- ObservationTimeMicroseconds
- ObservationTimeNanoseconds
- DigestHashValue
- HashIppayloadOffset
- HashIppayloadSize
- HashOutputRangeMin
- HashOutputRangeMax
- HashSelectedRangeMin
- HashSelectedRangeMax
- HashDigestOutput
- HashInitialiserValue
- SelectorName
- UpperCilimit
- LowerCilimit
- ConfidenceLevel
- InformationElementDataType
- InformationElementDescription
- InformationElementName
- InformationElementRangeBegin
- InformationElementRangeEnd
- InformationElementSemantics
- InformationElementUnits
- PrivateEnterpriseNumber
- VirtualStationInterfaceId
- VirtualStationInterfaceName
- VirtualStationUuid
- VirtualStationName
- Layer2segmentId
- Layer2octetDeltaCount
- Layer2octetTotalCount
- IngressUnicastPacketTotalCount
- IngressMulticastPacketTotalCount
- IngressBroadcastPacketTotalCount
- EgressUnicastPacketTotalCount
- EgressBroadcastPacketTotalCount
- MonitoringIntervalStartMilliSeconds
- MonitoringIntervalEndMilliSeconds
- PortRangeStart
- PortRangeEnd
- PortRangeStepSize
- PortRangeNumPorts
- StaMacaddress
- StaIpv4address
- WtpMacaddress
- IngressInterfaceType
- EgressInterfaceType
- RtpSequenceNumber
- UserName
- ApplicationCategoryName
- ApplicationSubCategoryName
- ApplicationGroupName
- OriginalFlowsPresent
- OriginalFlowsInitiated
- OriginalFlowsCompleted
- DistinctCountOfSourceIpaddress
- DistinctCountOfDestinationIpaddress
- DistinctCountOfSourceIpv4address
- DistinctCountOfDestinationIpv4address
- DistinctCountOfSourceIpv6address
- DistinctCountOfDestinationIpv6address
- ValueDistributionMethod
- Rfc3550jitterMilliseconds
- Rfc3550jitterMicroseconds
- Rfc3550jitterNanoseconds
- Dot1qDei
- Dot1qCustomerDei
- FlowSelectorAlgorithm
- FlowSelectedOctetDeltaCount
- FlowSelectedPacketDeltaCount
- FlowSelectedFlowDeltaCount
- SelectorIdtotalFlowsObserved
- SelectorIdtotalFlowsSelected
- Unknown: 396
- Unknown: 397
- Unknown: 398
- Unknown: 399
- Unknown: 400
- Unknown: 401
- Unknown: 402
- Unknown: 403
- Unknown: 404
- Unknown: 405
- Unknown: 406
- Unknown: 407
- Unknown: 408
- Unknown: 409
- Unknown: 410
- Unknown: 411
- Unknown: 412
- Unknown: 413
- Unknown: 414
- Dot1qCustomerDestinationMacaddress
- Unknown: 416
- PostLayer2octetDeltaCount
- PostMcastLayer2octetDeltaCount
- Unknown: 419
- PostLayer2octetTotalCount
- PostMcastLayer2octetTotalCount
- MinimumLayer2totalLength
- MaximumLayer2totalLength
- DroppedLayer2octetDeltaCount
- DroppedLayer2octetTotalCount
- IgnoredLayer2octetTotalCount
- NotSentLayer2octetTotalCount
- Layer2octetDeltaSumOfSquares
- Layer2octetTotalSumOfSquares
- Layer2frameDeltaCount
- Layer2frameTotalCount
- PseudoWireDestinationIpv4address
- IgnoredLayer2frameTotalCount
- MibObjectValueInteger
- MibObjectValueOctetString
- MibObjectValueOid
- MibObjectValueBits
- MibObjectValueIpaddress
- MibObjectValueCounter
- MibObjectValueGauge
- MibObjectValueTimeTicks
- MibObjectValueUnsigned
- MibObjectValueTable
- MibObjectValueRow
- MibObjectIdentifier
- MibSubIdentifier
- MibIndexIndicator
- MibCaptureTimeSemantics
- MibContextEngineId
- MibContextName
- MibObjectName
- MibObjectDescription
- MibObjectSyntax
- MibModuleName
- MobileImsi
- MobileMsisdn
- HttpStatusCode
- SourceTransportPortsLimit
- HttpRequestMethod
- HttpRequestHost
- HttpRequestTarget
- HttpMessageVersion
- NatInstanceId
- InternaladdressRealm
- ExternaladdressRealm
- NatQuotaExceededEvent
- NatThresholdEvent
- HttpUserAgent
- HttpContentType
- HttpReasonPhrase
- MaxSessionEntries
- MaxBibentries
- MaxEntriesPerUser
- MaxSubscribers
- MaxFragmentsPendingReassembly
- AddressPoolHighThreshold
- AddressPoolLowThreshold
- AddressPortMappingHighThreshold
- AddressPortMappingLowThreshold
- AddressPortMappingPerUserHighThreshold
- GlobaladdressMappingHighThreshold
- VpnIdentifier
- BgpCommunity
- BgpSourceCommunityList
- BgpDestinationCommunityList
- BgpExtendedCommunity
- BgpSourceExtendedCommunityList
- BgpDestinationExtendedCommunityList
- BgpLargeCommunity
- BgpSourceLargeCommunityList
- BgpDestinationLargeCommunityList
- SrhFlagsIpv6
- SrhTagIpv6
- SrhSegmentIpv6
- SrhActiveSegmentIpv6
- SrhSegmentIpv6basicList
- SrhSegmentIpv6listSection
- SrhSegmentsIpv6left
- SrhIpv6section
- SrhIpv6activeSegmentType
- SrhSegmentIpv6locatorLength
- SrhSegmentIpv6endpointBehavior
